--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="https://www.asus.com/campaign/aura/global/Aura-creator.php">Asus Aura</a></li>
+			<li><a href="https://www.youtube.com/watch?v=a-wVHL0lpb0">Javascript</a></li>
+			<li><a href="https://course.acciojob.com/open-web-editor?question=5996f997-e577-4a36-8ead-a0aeff48082">accio</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h1>3 Random Audios</h1>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+		<br>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		<br>
+		<audio src=" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
