--- a/main.html
+++ b/main.html
@@ -18,13 +18,19 @@
 	<section>
   <h1>3 Random Audios</h1>
 
-  <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+  <audio controls>
+	  <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg"/>
+  </audio>
   <br>
 
-  <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+  <audio  controls>
+	  <source src ="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg"/>
+  </audio>
   <br>
 
-  <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+  <audio controls>
+	  <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg"/>
+  </audio>
 </section>
 
     <script type="text/javascript" src="./script.js">
