--- a/main.html
+++ b/main.html
@@ -18,24 +18,17 @@
     </ul>
   </nav>
 
-  <!-- Part 2: Audio Section -->
   <section>
-    <h1>3 random audios</h1>
+  <h1>3 random audios</h1>
 
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-    </audio>
-    <br>
+  <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+  <br>
 
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-    </audio>
-    <br>
+  <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+  <br>
 
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/pang/paza-moduless.mp3" type="audio/mpeg">
-    </audio>
-  </section>
+  <audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio>
+</section>
 
   <!-- JS Script -->
   <script src="./script.js"></script>
